--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,20 +1,23 @@
 <div class="container"> 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Tweet Planner</a>
+        <%= link_to "Tweet Planner", root_path, class: "navbar-brand" %>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
+
             <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <%= link_to "Home", root_path, class: "nav-link active" %>
             </li>
+
             <li class="nav-item">
-            <a class="nav-link" href="/about">About</a>
+                <%= link_to "About", about_path, class: "nav-link active" %>
             </li>
+
             <li class="nav-item">
-            <a class="nav-link" href="/pricing">Pricing</a>
+                <%= link_to "Pricing", pricing_path, class: "nav-link active" %>
             </li>
         </ul>
         </div>
