--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,11 @@
 <div class="d-flex align-items-center justify-content-center">
     <h1> Welcome to TweetsPlanner </h1>
 </div>
+
+<% if @user %>
+    Logged in as <%= @user.email %>
+
+    <%# <%= link_to "Logout", logout_path, method: :delete %> 
+    <%= button_to "Logout", logout_path, method: :delete %>
+
+<% end %>
