--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,6 +1,6 @@
-<h1> Sign Up </h1>
+<h1> Edit Password </h1>
 
-<%= form_with model: @user, url: sign_up_path do |form| %>
+<%= form_with model: Current.user, url: edit_password_path do |form| %>
 
     <% if form.object.errors.any? %>
         <div class = "alert alert-danger">
@@ -9,12 +9,6 @@
             <% end %>    
         </div>
     <% end %>
-
-    <div class="mb-3">
-        <%= form.label :email %>
-        <%= form.text_field :email, class: "form-control", placeholder: "email@email.com" %>
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-    </div>
 
     <div class="mb-3">
         <%= form.label :password %>
@@ -27,7 +21,7 @@
     </div>
 
     <div>
-        <%= form.submit "Create Account", class: "btn btn-primary" %>
+        <%= form.submit "Update Password", class: "btn btn-primary" %>
     </div>
 
 <% end %>
