--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,7 +26,7 @@
                     <% if Current.user %>
 
                         <li class = "nav-item">
-                            <span class = "navbar-text"> </span><%= Current.user.email %> </span>
+                            <%= link_to Current.user.email, edit_password_path, class: "nav-link" %> 
                         </li>
 
                         <li class = "nav-item">
