app functionality done. time to focus on twitter

--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -26,7 +26,7 @@
         <%= form.password_field :password_confirmation, class: "form-control", placeholder: "confirm password" %>
     </div>
 
-    <div>
+    <div class="mb-3">
         <%= form.submit "Create Account", class: "btn btn-primary" %>
     </div>
 
